<resources>
    <string name="app_name">VucutOlcumlerim</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_KiloOranlari">Kilo Oranları</string>
    <string name="nav_YagOranlari">Yağ Oranları</string>
    <string name="nav_KasOranlari">Kas Oranları</string>
    <string name="nav_SuOranlari">Su Oranları</string>
    <string name="nav_FacebooktaPaylas">Facebookta Paylaş</string>
    <string name="nav_Twiter">Twiter</string>
    <string name="nav_lnkdn">Linkedin</string>

    <string name="nav_mail">Mail At</string>
    <string name="nav_tlfn">Telefonla Ara</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
